# cookiecutter-reproducible-analysis

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.folder_name}}/: .gitignore  README.md  config.yaml  log.md  pyproject.toml
{{cookiecutter.folder_name}}/ava/: __init__.py
{{cookiecutter.folder_name}}/ava/stage/parse_data/: main.py
{{cookiecutter.folder_name}}/hal/: io.py  repro.py
{{cookiecutter.folder_name}}/hal/fmt/: __init__.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/: config.yaml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_tasks.py  tasks.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/ava/00_explore/: explore_df.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/ava/01_data/: 010_group_data.py  020_preprocess_data.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/ava/03_view/: 010_plot_data.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/ava/stage/parse_data/: main.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/hal/: __init__.py  cluster.py  config.py  fileIO.py  io.py  report.py  repro.py  tasks.py  util.py  utils.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/hal/fmt/: base.py  paper.py  ppt.py  proplot_presets.yaml
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/report/: _config.yml  chapter_1.md  intro.md
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/requirements/: base.txt  explore.txt  optional.txt  quality.txt
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/src/01_data/: 010_group_data.py  010d_group_data.py  01_preprocess_data.py  01d_preprocess_data.py  020_preprocess_data.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/src/02_model/: 010_linear_model_fit.py  01m_linear_model_fit.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/src/03_view/: 000v_plot_data.py  010v_plot_data.py  01_plot_data.py  01v_plot_data.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/src/04_report/: grid_images.py
{{cookiecutter.yymmdd}}_{{cookiecutter.project_slug}}/tasks_bk/: repro.py  tests.py
